<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.pillageandplunder.elevatortracker.MainActivity$PlaceholderFragment" >

    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/TableRow1"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/CurrentFloorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/current_floor_label"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TargetFloorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/target_floor_label"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow2"
            android:gravity="center_vertical" >

            <RelativeLayout
                android:id="@+id/RelativeLayout1"
                android:layout_weight="1"
                android:gravity="center" >

                <NumberPicker
                    android:id="@+id/CurrentFloor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RelativeLayout2"
                android:layout_weight="1"
                android:gravity="center" >

                <NumberPicker
                    android:id="@+id/TargetFloor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/ElevatorsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20sp"
        android:text="@string/elevators_label"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/TableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/TableRow3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <Button
                android:id="@+id/ButtonElevator1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="selectElevator"
                android:tag="1"
                android:text="@string/button_elevator1" />

            <Button
                android:id="@+id/ButtonElevator4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="selectElevator"
                android:tag="4"
                android:text="@string/button_elevator4" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow4"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <Button
                android:id="@+id/ButtonElevator2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="selectElevator"
                android:tag="2"
                android:text="@string/button_elevator2" />

            <Button
                android:id="@+id/ButtonElevator5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="selectElevator"
                android:tag="5"
                android:text="@string/button_elevator5" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow5"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <Button
                android:id="@+id/ButtonElevator3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="selectElevator"
                android:tag="3"
                android:text="@string/button_elevator3" />

            <Button
                android:id="@+id/ButtonElevator6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="selectElevator"
                android:tag="6"
                android:text="@string/button_elevator6" />
        </TableRow>
    </TableLayout>

</LinearLayout>